# pyducklake

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  justfile  pyproject.toml
.flox/: env.json
.flox/env/: manifest.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/skills/check-readme-code/: SKILL.md  check.py
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  pip-audit.yml  release.yml  scorecard.yml
examples/: README.md
examples/delta_replication/: Dockerfile  README.md  delta_log.py  delta_producer.py  docker-compose.yml  replicate_service.py  replicator.py
examples/encrypted_catalog/: README.md  encrypted_catalog.py
examples/etl_pipeline/: README.md  etl_pipeline.py
examples/maintenance/: README.md  maintenance.py
examples/multi_table_transaction/: README.md  multi_table_transaction.py
examples/postgres_backend/: README.md  docker-compose.yml  postgres_backend.py
examples/quickstart/: README.md  quickstart.py
examples/schema_evolution/: README.md  schema_evolution.py
examples/table_replication/: Dockerfile  README.md  docker-compose.yml  producer.py  reader.py  router.py
examples/time_travel/: README.md  time_travel.py
src/pyducklake/: __init__.py  catalog.py  cdc.py  cli.py  exceptions.py  expressions.py  inspect.py  maintenance.py  partitioning.py  scan.py  schema.py  schema_evolution.py  snapshot.py  sorting.py  table.py  transaction.py  types.py  view.py
tests/: conftest.py  test_add_files.py  test_arrow_dataset.py  test_benchmarks.py  test_catalog.py  test_cdc.py  test_cli.py  test_commit_metadata.py  test_config.py  test_cross_feature.py  test_delete.py  test_delta_log.py  test_delta_replicator.py  test_encryption.py  test_expressions.py  test_hypothesis.py  test_inspect.py  test_maintenance.py  test_partitioning.py  test_rollback.py  test_scan.py  test_scan_formats.py  test_schema.py  test_schema_evolution.py  test_sorting.py  test_table.py  test_transaction.py  test_types.py  test_upsert.py  test_views.py  test_write.py
tests/integration/: conftest.py  test_all_backends.py  test_s3_backend.py
